@@ -52,7 +52,7 @@ public class CliIT {
 		if (!result.isEmpty()) {
 			System.out.println(result);
 		}
-		assertTrue(new String(Files.readAllBytes(output), StandardCharsets.UTF_8).contains("Invoice"));
+		assertTrue(Files.readString(output).contains("Invoice"));
 	}
 
 	private String getOutput(Process process) throws IOException {
@@ -61,7 +61,7 @@ public class CliIT {
 		String line;
 		while ((line = reader.readLine()) != null) {
 			builder.append(line);
-			builder.append(System.getProperty("line.separator"));
+			builder.append(System.lineSeparator());
 		}
 		return builder.toString();
 	}
