@@ -67,7 +67,7 @@ public class DeSerializationTest extends ResourceCase {
 
 		ZUGFeRDInvoiceImporter zii = new ZUGFeRDInvoiceImporter();
 		try {
-			zii.fromXML(new String(Files.readAllBytes(inputCII.toPath()), StandardCharsets.UTF_8));
+			zii.fromXML(Files.readString(inputCII.toPath()));
 
 		} catch (IOException e) {
 			hasExceptions = true;
@@ -76,9 +76,7 @@ public class DeSerializationTest extends ResourceCase {
 		CalculatedInvoice ci = new CalculatedInvoice();
 		try {
 			zii.extractInto(ci);
-		} catch (XPathExpressionException e) {
-			hasExceptions = true;
-		} catch (ParseException e) {
+		} catch (XPathExpressionException | ParseException e) {
 			hasExceptions = true;
 		}
 		ObjectMapper mapper = new ObjectMapper();
@@ -184,7 +182,7 @@ public class DeSerializationTest extends ResourceCase {
 		String exText = null;
 
 		try {
-			zii.fromXML(new String(Files.readAllBytes(inputUBL.toPath()), StandardCharsets.UTF_8));
+			zii.fromXML(Files.readString(inputUBL.toPath()));
 			ObjectMapper mapper = new ObjectMapper();
 			zii.extractInto(i);
 			String json = mapper.writeValueAsString(i);
@@ -196,11 +194,7 @@ public class DeSerializationTest extends ResourceCase {
 			assertEquals(newInvoiceFromJSON.getAdditionalReferencedDocuments().length, 2);
 
 
-		} catch (IOException e) {
-			exText = e.getMessage();
-		} catch (XPathExpressionException e) {
-			exText = e.getMessage();
-		} catch (ParseException e) {
+		} catch (IOException | ParseException | XPathExpressionException e) {
 			exText = e.getMessage();
 		}
 		assertNull(exText);
@@ -296,7 +290,7 @@ public class DeSerializationTest extends ResourceCase {
 		ZUGFeRDInvoiceImporter zii = new ZUGFeRDInvoiceImporter();
 		zii.doIgnoreCalculationErrors();
 		try {
-			zii.fromXML(new String(Files.readAllBytes(inputCII.toPath()), StandardCharsets.UTF_8));
+			zii.fromXML(Files.readString(inputCII.toPath()));
 			ObjectMapper mapper = new ObjectMapper();
 			zii.extractInto(i);
 			String json = mapper.writeValueAsString(i);
@@ -305,11 +299,7 @@ public class DeSerializationTest extends ResourceCase {
 			assertEquals("Test_EeISI_100", i.getNumber());
 			assertEquals(newInvoiceFromJSON.getNumber(), i.getNumber());
 
-		} catch (IOException e) {
-			exText = e.getMessage();
-		} catch (XPathExpressionException e) {
-			exText = e.getMessage();
-		} catch (ParseException e) {
+		} catch (IOException | ParseException | XPathExpressionException e) {
 			exText = e.getMessage();
 		}
 		assertNull(exText);
@@ -350,9 +340,7 @@ public class DeSerializationTest extends ResourceCase {
 			ObjectMapper mapper = new ObjectMapper();
 			String json = mapper.writeValueAsString(i);
 			newInvoiceFromJSON = mapper.readValue(json, Invoice.class);
-		} catch (ParseException e) {
-			hasExceptions = true;
-		} catch (JsonProcessingException e) {
+		} catch (ParseException | JsonProcessingException e) {
 			hasExceptions = true;
 		}
 		assertEquals(newInvoiceFromJSON.getBuyerOrderReferencedDocumentID(), "28934");
